Fixed java9+ deprecation warning